--- a/style.css
+++ b/style.css
@@ -1,36 +1,52 @@
+html {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  position: absolute;
+  padding: 0;
+  top: 0; left: 0; bottom: 0; right: 0;
+  min-height: 100%;
+}
+  
 .header {
   width: 100%;
   height: 50px;
   background: #2b4d58;
-  
 }
 
 body {
   height: 100%;
-  margin: 0; 
+  width: 100%;
   padding: 0;
   font-family: 'Times New Roman', Times, serif;
   font-size: 16px;
   line-height: 30px;
   color: white;
-  
-  }
+  margin: 0 0;
+}
 
 .content {
   width: 70%;
-  margin-top: 10px;
+  margin-top: 70px;
   margin-left: 25%;
   background: #ffffff;
   min-height: calc(100vh - 120px);
   max-width: 1440px;
-  
 }
+
 .sidebar {
   width: 20%;
+  margin-top: 12px;
   float: left;
   background: #2b4d58;
   min-height: calc(100vh - 100px);
 }
+
+.my_photo {
+  width: 100%;
+  object-fit: cover;
+}
+
 .footer {
   width: 100%;
   height: 50px;
@@ -40,20 +56,23 @@ body {
   align-items: center;
   line-height: 0px;
 }
+
 .git_link{
   justify-self: center;
   text-decoration: none;
   color:rgb(255, 255, 255);
 }
+
 .footer_image {
   width: 80px;
   margin-top: 10px;
   display: block;
   margin: 0 auto;
-  }
- .footer_text {
-    justify-self: center;
-  }
+}
+
+.footer_text {
+  justify-self: center;
+}
 
 .nav {
   background-color: #2b4d58;
@@ -61,40 +80,47 @@ body {
 }
 
 .nav-list {
-   display: flex;
-   justify-content: flex-end;
-   align-items: center;
-   list-style: none;
-   margin: 11px 0px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  margin: 11px 0px;
 }
 
 .nav-list a:hover {
  color: #4d2323;
 }
- .nav-link {
-   padding: 15px 15px;
-   line-height: 10px;
-   text-decoration: none;
-   color:rgb(192, 192, 192);
-   transition: .3s;
+
+.nav-link {
+  padding: 15px 15px;
+  line-height: 10px;
+  text-decoration: none;
+  color:rgb(192, 192, 192);
+  transition: .3s;
 }
+
 .section {
   color:#2b4d58;
 }
+
 .contacts {
   list-style: none;
   }
+ 
 .section-title{
   color:#2b4d58;
 }
+
 h1 {
   text-align: center;
   color:#ffffff;
 }
+
 #contacts {
   padding: 105px 15px;
   color:#ffffff;
- }
- #code {
+}
+
+#code {
  color:#f85a5a;
- }
+}
